# hireai-local

./: .env.example  .gitignore  .ignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260519_0001_create_auth_tables.py  20260520_0002_create_profile_tables.py  20260520_0003_create_jobs_applications.py  20260520_0004_create_resumes.py  20260520_0005_create_match_scores.py  20260520_0006_create_interviews.py  20260520_0007_create_activity_logs.py
backend/app/: main.py
backend/app/api/v1/: analytics.py  applications.py  auth.py  candidates.py  health.py  interviews.py  jobs.py  recruiters.py  resumes.py  router.py  scoring.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/models/: __init__.py  activity_log.py  application.py  candidate.py  interview.py  job.py  recruiter.py  resume.py  scoring.py  user.py
backend/app/repositories/: base.py
backend/app/schemas/: analytics.py  auth.py  common.py  interviews.py  jobs.py  profiles.py  resumes.py  scoring.py
backend/app/services/: base.py
backend/app/utils/: ensure_database.py  seed_demo_data.py  seed_roles.py
backend/tests/: conftest.py
backend/tests/integration/: test_analytics.py  test_auth_rbac.py  test_interviews.py  test_jobs_applications.py  test_profiles.py  test_resumes.py  test_scoring.py  test_seed_demo_data.py
backend/tests/unit/: test_health.py  test_rule_based_interview_ai.py  test_rule_based_matching_engine.py
(+107 files in other folders)
